namespace correction and Persisting proxies

--- a/dynamicproxy-tutorial.Test/dynamicproxy-tutorial.Test.csproj
+++ b/dynamicproxy-tutorial.Test/dynamicproxy-tutorial.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>dynamicproxy_part01.Test</RootNamespace>
+    <RootNamespace>dynamicproxy_tutorial.Test</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
